--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Nicholas Parisik
 description: Object oriented prog, microservices, agile dev
+author: © 2022. All rights reserved.
